<resources>
    <string name="app_name">Calc</string>
    <string name="one_button_text">1</string>
    <string name="two_button_text">2</string>
    <string name="three_button_text">3</string>
    <string name="plus_button_text">+</string>
    <string name="seven_button_text">7</string>
    <string name="eight_button_text">8</string>
    <string name="nine_button_text">9</string>
    <string name="multiplication_button_text">*</string>
    <string name="four_button_text">4</string>
    <string name="five_button_text">5</string>
    <string name="six_button_text">6</string>
    <string name="minus_button_text">-</string>
    <string name="zero_button_text">0</string>
    <string name="separator_button_text">.</string>
    <string name="equal_button_text">=</string>
    <string name="clean_button_text">AC</string>
    <string name="negative_button_text">+/-</string>
    <string name="percent_button_text">%</string>
    <string name="division_button_text">/</string>
    <string name="x_rate">$/Р</string>
</resources>